Changelog for GEMC
==================

1/9/2020

 - GUI background color changed to white
 - Neutrals particles color changed to blue
 - FTOF resolution coming from CCDB
 - Double radius for hits above thresholds
 - added hBertiniCaptureAtRest to process catalogueq

12/18/19

 - Modified RTPC hit process parameters and bank names.


10/7/19

 - added hBertiniCaptureAtRest tag

7/23/19

 - exiting if gcard is not found

7/10/19

 - added DIGITIZATION_VARIATION, to be used by digitization routines.

7/8/19

 - added background merging for FTOF, EC, PCAL, FT_CAL, FT_HODO, LTCC, HTCC

6/17/19

 - number of events made long int

6/14/19

- added target position from CCDB (fixed variation, todo: detector-dependent variation mechanism) to MM and CTOF routines.

5/23/19

 - added "PhotoNuclear" entry in the physics option list as a check that this part is not included with the normal phys list constructors.

5/17/19

 - option RECORD_MIRRORS renamed RECORD_OPTICALPHOTONS

5/8/19

 - added JSON ouput for all generator options

5/7/19

 - first implementation of JSON output for the options
 - output implemention of JSON options for txt and evio

5/6/19

 - reorg of gemc_option categories
 - only write option map out if output is specified
 - adding json format output for option map (in process)

5/1/19

 - fixed dc setting of NWIRES.
 - added flight time to tdc in dc


4/25/19

 - Richard Holmes: added FILTER_HADRONS options: when set to 1, do not write events if there are no hadrons.
   Otherwise if nonzero write only events having a hadron with matching ID. For example -FILTER_HADRONS=2212 for protons.
   Also, do not print progress if evtN hasn't changed.

4/18/19

 - added mirror hit process routine as standalone routine and bank

3/26/19

 - added FILTER_HITS options: when set to 1, do not write events if there are not hits.

3/25/19

- making sure initWithRunNumber is not loading calibration constants before activating event for all hit processes

2/25/19
